--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
 </head>
 <body>
 <div id="loader" class="container">
-  <p>Loading the site, please wait.</p>
+  <p></p>
 </div>
 <div id="main-container">
 <div id="stripe">
   <div class="container">
     <div class="sixteen columns">
       <div class="seven columns alpha">
-        <h1 class="stripe-text left"> Offline <span>Bitcoin</span> Wallet  </h1>
+        <h1 class="stripe-text left"> <span></span>  </h1>
       </div>
       <div class="two columns">
         <a href="/"><h1 class="stripe-text center"></h1></a>
       </div>
       <div class="seven columns omega">
-        <h1 class="stripe-text right"> Generate <span>Secure</span> Addresses </h1>
+        <h1 class="stripe-text right"> <span></span> </h1>
       </div>
       <p id="above-stripe" class="remove-bottom">
-        <span>Donate:</span> 17edQ3AseQtMHibLwCmTCqb9gk7zvj63cg <br/> 
-        <span>GitHub</span>: <a href="https://github.com/mikewoods/OfflineAddress.com">github.com/mikewoods/OfflineAddress.com</a> &nbsp;
+        <span>Donate:</span> <br/> 
+        <span>GitHub</span>: <a href="https://github.com/mikewoods/OfflineAddress.com"></a> &nbsp;
         <span class="commit-id"> <span>Commit ID</span>: 536909 </span>
       </p>
       <p id="below-stripe" class="remove-bottom">
-        Open Source, JavaScript, Client-Side
+        />_
       </p>
     </div>
   </div>
